# emgdevice

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Application.hpp  CSVLogger.hpp  DataProcessor.hpp  MainWindow.hpp  SerialCommunicator.hpp
src/: Application.cpp  CSVLogger.cpp  DataProcessor.cpp  MainWindow.cpp  SerialCommunicator.cpp  main.cpp
tests/: test.cpp
